--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ nav{
 header{
     padding: 50px 20px 0;
     background-color: #1746A2;
-    height: 87.3vh;
+    height: 90vh;
 }
 
 .header-section{
@@ -119,12 +119,12 @@ header{
 }
 
 .left-header{
-    max-width: 40vw;
+    max-width: fit-content;
 }
 
 .left-header h1{
     margin-top: 20px;
-    font-size: 5rem;
+    font-size: 4.3rem;
     color: white;
 }
 
