contact form added

--- a/media_queries.css
+++ b/media_queries.css
@@ -67,6 +67,10 @@
     .rtask h3 {
         margin-bottom: 10px;
     }
+
+    .lcon p{
+        text-align: center;
+    }
 }
 
 @media screen and (max-width: 767px) {
@@ -240,5 +244,16 @@
 
     .sub-container{
         flex-wrap: wrap;
+    }
+
+    form {
+        background-color: #1746A2;
+        text-align: left;
+        color: white;
+        max-width: 400px;
+        margin: 50px auto;
+        padding: 20px;
+        border-radius: 5px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
     }
 }
