--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap');
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -8,36 +8,36 @@
     scroll-behavior: smooth;
 }
 
-.container{
+.container {
     max-width: 1500px;
     margin-inline: auto;
     padding-inline: 20px;
     overflow: hidden;
 }
 
-.bucket{
+.bucket {
     max-width: 1180px;
     margin-inline: auto;
     padding-inline: 20px;
     overflow: hidden;
 }
 
-.flex{
+.flex {
     display: flex;
     align-items: center;
 }
 
-a{
+a {
     display: inline-block;
     text-decoration: none;
     color: white;
 }
 
-ul{
+ul {
     list-style: none;
 }
 
-.primary-btn{
+.primary-btn {
     background-color: #FF731D;
     border-radius: 8px;
     font-weight: 700;
@@ -46,11 +46,11 @@ ul{
     transition: 0.2s ease-out;
 }
 
-.primary-btn:hover{
+.primary-btn:hover {
     scale: 1.1;
 }
 
-.secondary-btn{
+.secondary-btn {
     border: 1px solid #1746A2;
     border-radius: 8px;
     font-weight: 500;
@@ -58,104 +58,104 @@ ul{
     color: black;
 }
 
-.secondary-btn:hover{
+.secondary-btn:hover {
     color: #FF731D;
     border-color: #FF731D;
 }
 
-.main-nav{
+.main-nav {
     padding: 20px;
     justify-content: space-evenly;
     position: relative;
 }
 
-.nav-toggle{
+.nav-toggle {
     display: none;
 }
 
-.company-logo img{
+.company-logo img {
     width: 100px;
     transition: 0.2s ease-out;
 }
 
-.company-logo img:hover{
+.company-logo img:hover {
     transform: translateX(15px);
 }
 
-nav{
+nav {
     background-color: #1746A2;
 }
 
-.nav-links{
+.nav-links {
     flex-basis: 100%;
 }
 
-.nav-links ul{
+.nav-links ul {
     justify-content: end;
     gap: 40px;
 }
 
-.hover-links{
+.hover-links {
     color: white;
     transition: 0.2s ease-out;
 }
 
-.hover-links:hover{
+.hover-links:hover {
     color: #FF731D;
     scale: 1.1;
 }
 
-header{
+header {
     padding: 50px 20px 0;
     background-color: #1746A2;
     height: 90vh;
 }
 
-.header-section{
+.header-section {
     justify-content: center;
     align-items: center;
     gap: 50px;
     margin-top: 70px;
 }
 
-.left-header{
+.left-header {
     max-width: fit-content;
 }
 
-.left-header h1{
+.left-header h1 {
     margin-top: 20px;
     font-size: 4.3rem;
     color: white;
 }
 
-.left-header p{
+.left-header p {
     margin-top: 20px;
     font-size: 1.4rem;
     color: white;
 }
 
-.subheading{
+.subheading {
     color: #577592;
     margin-top: 20px;
     margin-bottom: 40px;
 }
 
-.right-header img{
+.right-header img {
     width: 100%;
 }
 
-.get-started-btn{
+.get-started-btn {
     margin-top: 20px;
     padding: 18px 30px;
     font-size: large;
 }
 
-.aboutus{
+.aboutus {
     margin-block: 90px;
     text-align: center;
 }
 
-.aboutus h2{
+.aboutus h2 {
     margin-top: 10px;
     margin-bottom: 30px;
     font-size: 3rem;
@@ -164,12 +164,12 @@ header{
     color: #1746A2;
 }
 
-.aboutus p{
+.aboutus p {
     font-size: 1rem;
     line-height: 30px;
 }
 
-.comp-header{
+.comp-header {
     color: #183b56;
     margin-top: 20px;
     margin-bottom: 20px;
@@ -177,23 +177,23 @@ header{
     font-size: 1rem;
 }
 
-.company-section{
+.company-section {
     margin-top: 40px;
     margin-bottom: 60px;
 }
 
-.company-logos{
+.company-logos {
     justify-content: space-evenly;
     flex-wrap: wrap;
     gap: 20px;
 }
 
-.logo{
+.logo {
     height: 48px;
 }
 
 
-.services-section{
+.services-section {
     margin-block: 40px;
     flex-wrap: wrap;
     gap: 20px;
@@ -203,7 +203,7 @@ header{
     margin-right: 50px;
 }
 
-.service{
+.service {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -216,30 +216,30 @@ header{
     cursor: pointer;
 }
 
-.service h2{
+.service h2 {
     margin-bottom: 20px;
     font-size: 1.6rem;
 }
 
-.service.service:nth-child(1) h2{
-    
+.service.service:nth-child(1) h2 {
+
     margin-block: 20px;
     font-size: 2rem;
 }
 
-.service:nth-child(1){
+.service:nth-child(1) {
     background-color: white;
     color: black;
 }
 
-.service:nth-child(1):hover{
+.service:nth-child(1):hover {
     background-color: white;
     color: black;
     scale: 1;
     box-shadow: 0 0 0 white;
 }
 
-.service:hover{
+.service:hover {
     background-color: #FF731D;
     color: white;
     scale: 1.03;
@@ -247,20 +247,19 @@ header{
     box-shadow: 10px 10px 5px rgba(63, 62, 62, 0.486);
 }
 
-.quote{
+.quote {
     margin-block: 60px;
     background-color: #1746A2;
-    height: 350px;
 }
 
-.con{
-    padding-top: 100px;
+.con {
+    /* padding-top: 100px; */
     justify-content: space-evenly;
     gap: 50px;
     align-items: center;
 }
 
-.btn{
+.btn {
     border: 3px solid white;
     text-align: center;
     width: 200px;
@@ -273,52 +272,52 @@ header{
     transition: 0.2s ease-in-out;
 }
 
-.btn:hover{
+.btn:hover {
     color: white;
     border-color: #FF731D;
     transform: translateX(15px);
 }
 
-.lcon{
+.lcon {
     color: white;
 }
 
-.lcon h2{
+.lcon h2 {
     margin-block: 20px;
     font-size: 2.3rem;
 }
 
-footer{
+footer {
     padding-block: 80px;
     background-color: #1746A2;
 }
 
-.footer-container{
+.footer-container {
     align-items: flex-start;
     justify-content: space-between;
 }
 
-.link-column{
+.link-column {
     flex-direction: column;
     align-items: flex-start;
     gap: 20px;
 }
 
-.link-column h4{
+.link-column h4 {
     color: #FF731D;
 }
 
-.sub-footer{
+.sub-footer {
     padding-block: 30px;
     background-color: #2d55a3;
 }
 
-.sub-container{
+.sub-container {
     gap: 30px;
     justify-content: center;
 }
 
-.contactus{
+.contactus {
     position: fixed;
     width: 50px;
     height: 50px;
@@ -329,23 +328,76 @@ footer{
     cursor: pointer;
 }
 
-.contactus:hover{
+.contactus:hover {
     box-shadow: 0 0 5px black;
 }
 
-.ltask img{
+.ltask img {
     width: 800px;
 }
 
-.rtask h2{
+.rtask h2 {
     margin-bottom: 20px;
     font-size: 3rem;
 }
 
-.rtask p{
+.rtask p {
     margin-block: 20px;
 }
 
-.rtask h3{
+.rtask h3 {
     margin-bottom: 15px;
+}
+
+form {
+    background-color: #1746A2;
+    color: white;
+    width: 500px;
+    margin: 50px auto;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
+}
+
+h2 {
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+label {
+    display: block;
+    margin-bottom: 10px;
+    font-weight: bold;
+}
+
+input,
+textarea {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 20px;
+    border: none;
+    border-radius: 3px;
+    box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
+}
+
+textarea {
+    height: 120px;
+}
+
+button {
+    display: block;
+    margin: 0 auto;
+    padding: 10px 20px;
+    background-color: #FF731D;
+    color: #fff;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: bold;
+    transition: background-color 0.3s ease;
+}
+
+button:hover {
+    background-color: #3e8e41;
 }
